tests/fail/if_then_else_without_return_value.tig
while if 1 then break else break do break
