tests/fail/if_then_else_without_return_value.err
Semantic Error: break used out of a while or for statement at line 1.
Semantic Error: break used out of a while or for statement at line 1.
Semantic Error: while used with a non-return condition at line 1.
Semantic Error: break used out of a while or for statement at line 1.
